Grammar and Spelling

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                          <div>
                               <h2 class="section-title">Youtube Featured Video</h2>
                               <div class="videos">
-                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/_mEix37P65c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/NcxccxI8PWQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                               </div>
                          </div>
                     </section>
@@ -97,7 +97,7 @@
                          <div>
                               <h2 class="section-title">Twitter Featured Thread</h2>
                               <div class="videos">
-                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">🧵RECIST Responses in Solid Tumors<br><br>Here we will look at the response rates in solid tumors.</p>&mdash; Biotech2k (@Biotech2k1) <a href="https://twitter.com/Biotech2k1/status/1620842262371663872?ref_src=twsrc%5Etfw">February 1, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Today we are excited to talk about the BMS in-licensed candidate, EXS4318 as it enters the clinic; a potential first-in-class PKC theta inhibitor &amp; future treatment option for many inflammation &amp; immunology conditions. <a href="https://twitter.com/search?q=%24EXAI&amp;src=ctag&amp;ref_src=twsrc%5Etfw">$EXAI</a> <a href="https://twitter.com/exscientiaAI?ref_src=twsrc%5Etfw">@exscientiaAI</a> 1/8. <a href="https://t.co/tEQxu2wIpD">https://t.co/tEQxu2wIpD</a> <a href="https://t.co/30dgWMIB2v">pic.twitter.com/30dgWMIB2v</a></p>&mdash; Richard J Law 🚜🇺🇦🍉 (@drrichjlaw) <a href="https://twitter.com/drrichjlaw/status/1621139851679764480?ref_src=twsrc%5Etfw">February 2, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                               </div>
                          </div>
                     </section>
