--- a/learning/chemotherapy.html
+++ b/learning/chemotherapy.html
@@ -70,7 +70,7 @@
                               <a href="#anthra">Anthracyclines</a>
                          </li>
                          <li class="science-topics">
-                              <a href="#metabolites">Antimetabolities</a>
+                              <a href="#metabolites">Antimetabolites</a>
                          </li>
                          <li class="science-topics">
                               <a href="#mitotic">Antimitotic Drugs</a>
@@ -315,7 +315,7 @@
                          <p class="top-link"><a href="#top">Top</a></p>
                     </section>
 
-                    <p>&#42; I am not a doctor. This is not designed to be Medical Advice. Please refer to your doctor for Medical Decisions/p>
+                    <p>&#42; I am not a doctor. This is not designed to be Medical Advice. Please refer to your doctor for Medical Decisions</p>
 
                </div>
 
